# slider-pvp-contract

./: 2025_10_09_CHANGES_TO_MAKE.md  Anchor.toml  CHANGELOG.md  README.md  client-test.ts  install-tools.sh  package-lock.json  package.json
devnet-testing/: README.md  TESTING_GUIDE.md  full-test.js  fund-players.js  simple-test.js  test-player1.json  test-player2.json
docs/: ARCHITECTURE.md  BOTTLENECKS_TO_FIX.md  CONTRACT_FLOW.md  DEPLOYMENT.md  PROJECT_STATUS.md  QUICKSTART.md  SUMMARY.md  TESTING_GUIDE.md  TEST_NOW.md  WEB3_INTEGRATION_GUIDE.md
example-frontend/: FRONTEND_SETUP.md  MULTI_PARTY_FLOW.md  README.md  SliderPvpClient.ts  WagerComponent.tsx  package.json.template  vanilla-js-example.html
programs/slider-pvp/: Cargo.toml
programs/slider-pvp/src/: lib.rs
tests/: slider-pvp.ts
